[tool.poetry]
name = "audio-extractor"
version = "0.1.0"
description = ""
authors = ["Oleksander  Shevchenko <oleksander.shevchenko777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
moviepy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
